misc fixes, setup layers to act as z-index

--- a/test/style.sass
+++ b/test/style.sass
@@ -1,6 +1,6 @@
 $dataColor: #80BEC7
 $black:     #333
-$grid:      #BBB
+$grid:      #DDD
 
 body
   font-family: 'Source Sans Pro', sans-serif
@@ -23,4 +23,11 @@ text
       font-size: 13px
   path
     stroke: $black
+    stroke-width: 1px
+
+.grid
+  .domain
+    display: none
+  line
+    stroke: $grid
     stroke-width: 1px
